[package]
name = "doay"
version = "1.0.3"
description = "A Doay App"
authors = ["Doay"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "doay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
logger = { path = "./logger" }

log = "0.4"
env_logger = "0.11"

dirs = "6"
chrono = "0.4"
sysinfo = "0.35"
once_cell = "1"
regex = "1.11"
reqwest = { version = "0.12", features = ["socks", "stream", "gzip", "brotli"] }
futures-util = "0.3"

#nix = { version = "0.29", features = ["fs"] }
#rustc_version = "0.4"
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["net", "fs", "io-util", "sync", "time", "rt-multi-thread"] }

actix-files = "0.6"
actix-web = "4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wininet"] }

[profile.release]
#opt-level = "z"        # 优化体积（0 1 2 3 "s" 或 "z"）
#lto = true             # 启用 Link Time Optimization
#codegen-units = 1      # 降低并发编译数量，提高优化质量
#strip = true           # 去除调试符号
